@@ -6,6 +6,7 @@ CHANGES IN CUPS V1.3b1
 	- Copyright updates - CUPS is now owned by Apple Inc.
 	- Documentation updates (STR #1775, STR #2027, STR #2130,
 	  STR #2131, STR #2263, STR #2356, STR #2397)
+	- Added new cupsfilter utility (STR #1734)
 	- Added new job-printer-state-message and
 	  job-printer-state-reasons attributes to jobs (STR #2418)
 	- Added LDAP+SSL support (STR #1967)
